--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title></title>
+  <title> 祝大京果生日快乐！</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 </head>
@@ -12,9 +12,12 @@
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
   <div id="content" class="content">
-    <h1>If you can see this, something is broken (or JS is not enabled)!!.</h1>
+    <h1>祝可爱，善良，漂亮，纯真的大京果👸生日快乐！！！新的一岁有新的收获，每天开心😁，工作顺利😏，万事如意😄，早日找到像我一样疼妹纸的好男朋友😊。（假装你看不见！）</h1>
   </div>
-
+  <div><audio loop autoplay >
+  <source src="happybirthday.mp3" type="audio/mpeg" />
+</audio> </div>
+     
   <script>
     __REACT_DEVTOOLS_GLOBAL_HOOK__ = parent.__REACT_DEVTOOLS_GLOBAL_HOOK__
   </script>
